Another massive commit

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,15 @@
 		%sveltekit.head%
 		<style>
 			body {
-				background-color: #000;
+				width: 100vw;
+				height: 100vh;
+				color: #fff;
+				background-color: #333;
+				background-image: linear-gradient(to bottom, #333, #000);
+				display: flex;
+				justify-content: flex-start;
+				flex-direction: column;
+				align-items: center;
 			}
 		</style>
 	</head>
