--- a/src/app.html
+++ b/src/app.html
@@ -17,6 +17,62 @@
 				flex-direction: column;
 				align-items: center;
 			}
+
+			.game-container {
+				position: relative;
+				width: 800px;
+				height: 600px;
+				/* background: black; */
+				overflow: hidden;
+			}
+
+			.game-viewport {
+				position: absolute;
+				top: 0;
+			}
+
+			.crawl-container {
+				position: relative;
+				z-index: 1;
+				width: 800px;
+				height: 300px;
+				bottom: -300px;
+				transform: perspective(200px) rotateX(20deg) skewY(0deg);
+			}
+
+			canvas {
+				display: block;
+			}
+
+			.crawl-text {
+				position: absolute;
+				font-family: 'VT323', monospace; /* Or any font of your choice */
+				font-size: 48px;
+				color: rgba(255, 150, 0, 1);
+				font-weight: bold;
+				text-align: center;
+				white-space: nowrap;
+				pointer-events: none;
+				left: 50%;
+				bottom: -20px;
+				/* Start the animation when the element is rendered */
+				animation: crawl 15s linear forwards;
+			}
+
+			@keyframes crawl {
+				0% {
+					transform: translate(-50%, 0%);
+					opacity: 1;
+				}
+				80% {
+					transform: translate(-50%, -1000%);
+					opacity: 1;
+				}
+				100% {
+					transform: translate(-50%, -1200%);
+					opacity: 0;
+				}
+			}
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
